bin/testsuite/tests/compiler/src/compiler1020.swg
#global testerror "Err0722"
func @toto() // swc-expected-error {{parser_err_invalid_intrinsic}}
{
}